# RallyRobotPilot_2025

./: README.md  pyproject.toml  record_0.npz  record_1.npz  record_2.npz  record_3.npz  record_4.npz  record_5.npz  record_6.npz  record_7.npz  requirements.txt  setup.py
Data_Analysis/: Data_exploration.ipynb  driving_model.pth  sensor_data_example.txt
assets/Indicators/: Indicators.pdn
assets/SimpleTrack/: Environment.mtl  Obstacles.mtl  SimpleTrack.blend  SimpleTrack.blend1  Track.mtl  track_metadata.json
assets/SlightlyHarder/: track_metadata.json
docker/: Dockerfile.gui  Dockerfile.headless  docker-compose.yaml
rallyrobopilot/: __init__.py  car.py  game_launcher.py  particles.py  raycast_sensor.py  remote_commands.py  remote_controller.py  sensing_message.py  track.py
rallyrobopilot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: DataCollector.ui  autopilot_data_exploration.py  autopilot_model_1.py  data_collector.py  data_reader.py  example_autopilot.py  main.py
src/rallyrobotpilot_2025/: __init__.py
