[project]
name = "rallyrobotpilot-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SZPY1950", email = "savioz.py@protonmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "torch>=2.9.0",
]

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
